# extremeloss

./: CHANGELOG.md  README.md  pyproject.toml
docs/: index.md
docs/api/: reference.md
docs/examples/: README.md
docs/guides/: design.md  getting-started.md  integration.md  package-overview.md
examples/: README.md  block_maxima_gev_workflow.py  bootstrap_uncertainty_demo.py  conditional_mc_demo.py  diagnostic_plots.py  empirical_tail_analysis.py  importance_sampling_demo.py  integration_helpers_demo.py  pot_gpd_workflow.py
src/extremeloss/: __init__.py  integration.py  plotting.py
src/extremeloss/analytics/: __init__.py  diagnostics.py  return_periods.py
src/extremeloss/estimation/: __init__.py  conditional_mc.py  importance_sampling.py  metrics.py  rare_event.py
src/extremeloss/evt/: block_maxima.py  gpd.py  pot.py  tail_index.py  thresholds.py
src/extremeloss/utils/: validation.py
tests/: test_protocols.py  test_public_api.py  test_results.py  test_risk_measure_conformance.py  test_risksim_integration.py
tests/estimation/: test_is_empirical_conformance.py  test_metrics.py  test_rare_event.py
tests/evt/: test_gpd_full_distribution.py
